# doiggie-dataverse

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  COPYING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  re3data.yml
doc/: conf.py
doiggie_dataverse/: __init__.py  repository.py
pooch_dataverse/: __init__.py  _version.py  instances.txt  repository.py
tests/: conftest.py
tests/data/: dataverse_record.py
tests/unit/: test_known_instances_repository.py  test_pooch_dataverse.py  test_repository.py
