# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm[toml] >= 7",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for doiggie_dataverse's version
[project]
name = "doiggie-dataverse"
description = "Dataverse support for doiggie"
readme = "README.md"
maintainers = [
    { name = "Pascal Kollmer" },
    { name = "Dominic Kempf", email = "ssc@uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.9"
license-files = ["LICEN[CS]E*"]
license = "BSD-2-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "doiggie",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "requests-mock",
]

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "doiggie_dataverse",
]

[tool.setuptools.package-data]
doiggie_dataverse = ["instances.txt"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "doiggie_dataverse/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project.entry-points."doiggie.data_repositories"]
dataverse = "doiggie_dataverse:DataverseRepository"
